# taskguard

./: .gitignore  .llmcontrol.yaml  CHANGELOG.md  Makefile  README.md  SETUP.md  TODO.yaml  __init__.py  cli.py  install.sh  model.txt  pyproject.toml  setup.py  src.txt  taskguard.sh
.github/workflows/: ci.yml
config/: enterprise_config.yaml  learning_config.yaml  startup_config.yaml
docs/: README.md
src/taskguard/: __init__.py  best_practices.py  cli.py  document_parser.py  local_llm_interface.py  shell_integration.py  taskguard.py
src/taskguard/core/: __init__.py  controller.py  project.py  task.py
src/taskguard/llm/: __init__.py  interface.py  providers.py
src/taskguard/security/: __init__.py  patterns.py  scanner.py  validator.py
tests/: test_basic.py  test_best_practices.py  test_document_parser.py  test_llm_interface.py
tests/docker/: Dockerfile  Dockerfile.alpine-3.16  Dockerfile.alpine-3.17  Dockerfile.archlinux  Dockerfile.centos-7  Dockerfile.centos-8  Dockerfile.debian-bullseye  Dockerfile.test-runner  Dockerfile.ubuntu-20.04  Dockerfile.ubuntu-22.04  docker-compose.yml  run_tests.sh
tests/docker/playbooks/: run_tests.yml
tests/docker/playbooks/templates/: test_report.j2
