[tool.poetry]
name = "taskguard"
version = "0.2.1"
description = "LLM Task Controller - Intelligent project management with local AI"
authors = ["Tom Sapletta <info@softreck.dev>"]
maintainers = ["WRONAI Team"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/wronai/taskguard"
documentation = "https://taskguard.readthedocs.io"
repository = "https://github.com/wronai/taskguard.git"
# Remove any emoji from description as it might cause issues
# Add project_urls for better PyPI display
[tool.poetry.urls]
"Bug Tracker" = "https://github.com/wronai/taskguard/issues"
"Changelog" = "https://github.com/wronai/taskguard/blob/main/CHANGELOG.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Natural Language :: English",
]

[tool.poetry.dependencies]
python = "^3.8"
pyyaml = "^6.0"
requests = "^2.31.0"
typing-extensions = { version = "^4.7.1", python = "<3.8" }

# LLM Dependencies
ollama-python = { version = "^0.1.0", optional = true }
openai = { version = "^1.0.0", optional = true }
anthropic = { version = "^0.3.0", optional = true }

# Security Dependencies
bandit = { version = "^1.7.0", optional = true }
safety = { version = "^2.0.0", optional = true }
semgrep = { version = "^1.0.0", optional = true }

# Documentation Dependencies
mkdocs = { version = "^1.4.0", optional = true }
mkdocs-material = { version = "^8.0.0", optional = true }
mkdocstrings = { version = "^0.19.0", optional = true, extras = ["python"] }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
taskguard = "taskguard.cli:main"
tg = "taskguard.cli:main"
llmtask = "taskguard.cli:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-cov = "^4.0"
black = "^22.0"
isort = "^5.0"
flake8 = "^5.0"
mypy = "^1.0"
pre-commit = "^2.0"
tox = "^4.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.0"
mkdocs-material = "^8.0.0"
mkdocstrings = {extras = ["python"], version = "^0.19.0"}

[tool.poetry.group.llm.dependencies]
ollama-python = "^0.1.0"
openai = "^1.0.0"
anthropic = "^0.3.0"

[tool.poetry.group.security.dependencies]
bandit = "^1.7.0"
safety = "^2.0.0"
semgrep = "^1.0.0"

[tool.poetry.group.all.dependencies]
pytest = "^7.0"
pytest-cov = "^4.0"
black = "^22.0"
isort = "^5.0"
flake8 = "^5.0"
mypy = "^1.0"
pre-commit = "^2.0"
tox = "^4.0"
mkdocs = "^1.4.0"
mkdocs-material = "^8.0.0"
mkdocstrings = {extras = ["python"], version = "^0.19.0"}
ollama-python = "^0.1.0"
openai = "^1.0.0"
anthropic = "^0.3.0"
bandit = "^1.7.0"
safety = "^2.0.0"
semgrep = "^1.0.0"

# Development tools configuration
[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["taskguard"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "yaml.*",
    "requests.*",
    "ollama.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "llm: marks tests that require LLM connection",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src/taskguard"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.bandit]
exclude_dirs = ["tests", "build", "dist"]
skips = ["B101", "B601"]

[tool.ruff]
target-version = "py38"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*" = ["S101"]

[tool.ruff.isort]
known-first-party = ["taskguard"]

# Documentation
[tool.mkdocs]
site_name = "TaskGuard Documentation"
site_description = "LLM Task Controller with Local AI Intelligence"
site_url = "https://taskguard.readthedocs.io"
repo_url = "https://github.com/wronai/taskguard"
repo_name = "wronai/taskguard"

# Packaging metadata
[tool.hatch.version]
path = "src/taskguard/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/taskguard"]